# Research-Sphere-MCP

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  pytest.ini
MCP/: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  main.py  run.py
MCP/backend/: Dockerfile  main.py  pyproject.toml
MCP/backend/app/: main.py
MCP/backend/app/core/: auth.py  config.py  errors.py
MCP/backend/app/rag/: document_processor.py  pipeline.py  vector_store.py
MCP/db/: retrieval_system.py  storage_system.py
MCP/docs/: README.md  api.md  architecture.md  contributing.md  deployment.md  development-guide.md  development.md  getting-started.md  security.md  user-guide.md
MCP/frontend/: Dockerfile  env.example  vite.config.ts
MCP/frontend/src/: App.tsx  env.d.ts
MCP/frontend/src/components/: Layout.tsx
MCP/frontend/src/hooks/: useTheme.ts
MCP/frontend/src/pages/: Chat.tsx  Home.tsx  (+1 more)
MCP/generation/: generator.py
MCP/loaders/: arxiv_loader.py  pdf_loader.py
MCP/storage/: graph_manager.py  vector_store_manager.py
docs/rag/: README.md
src/: docker-compose.yml  docker-compose.yml.sample
src/common/: config.py  interfaces.py  logger.py  models.py
src/core/: server.py
src/generation/: chunker.py
src/graph/: graph_builder.py  nodes.py
src/loaders/: arxiv_loader.py  pdf_loader.py
src/retrieval/: retriever.py
src/storage/: graph_manager.py  vector_store_manager.py
tests/: conftest.py
tests/generation/: test_generator.py
tests/integration/: test_pipeline.py
tests/loaders/: test_arxiv_loader.py  test_pdf_loader.py
tests/retrieval/: test_retriever.py
tests/storage/: test_graph_manager.py  test_vector_store.py
(+3 files in other folders)
