[project]
name = "research-sphere-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[uvicorn]>=0.115.12",
    "langchain>=0.3.24",
    "langchain-community>=0.3.22",
    "langchain-deepseek>=0.1.3",
    "langchain-openai>=0.3.14",
    "langgraph>=0.3.34",
    "mcp[cli]>=1.6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "coverage>=7.3.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = "-v --cov=src --cov-report=term-missing"
markers = [
    "asyncio: mark test as async",
    "integration: mark test as integration test"
]
